# openapi-server/src/model_get_isolation_windows_200_response_inner_isolation_windows_.go
@@ -1,0 +1,33 @@
+/*
+ * Title
+ *
+ * Title
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package mzserver
+
+type GetIsolationWindows200ResponseInnerIsolationWindows struct {
+	Low float64 `json:"low,omitempty"`
+
+	High float64 `json:"high,omitempty"`
+}
+
+// AssertGetIsolationWindows200ResponseInnerIsolationWindowsRequired checks if the required fields are not zero-ed
+func AssertGetIsolationWindows200ResponseInnerIsolationWindowsRequired(obj GetIsolationWindows200ResponseInnerIsolationWindows) error {
+	return nil
+}
+
+// AssertRecurseGetIsolationWindows200ResponseInnerIsolationWindowsRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of GetIsolationWindows200ResponseInnerIsolationWindows (e.g. [][]GetIsolationWindows200ResponseInnerIsolationWindows), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseGetIsolationWindows200ResponseInnerIsolationWindowsRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aGetIsolationWindows200ResponseInnerIsolationWindows, ok := obj.(GetIsolationWindows200ResponseInnerIsolationWindows)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertGetIsolationWindows200ResponseInnerIsolationWindowsRequired(aGetIsolationWindows200ResponseInnerIsolationWindows)
+	})
+}
